# cascading-ui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE_MIT  README.md  SPEC.md  SUGGESTIONS.md
.github/workflows/: rust.yml
cwf/: Cargo.toml  component.cwf  ideas.cwf
cwf/src/: lib.rs  tokens.rs
cwf_lib/: Cargo.toml
cwf_lib/src/: lib.rs  tokens.rs
memory/: orchestrator.md
src/: app.rs  context.rs  cwf.rs  html.rs  lex.rs  lib.rs  meta.rs  parse.rs  quote.rs  to_tokens.rs  tokens.rs
src/app/: cwf.rs
src/data/: ast.rs  context.rs  dom.rs  meta.rs  mod.rs  semantics.rs  tokens.rs
src/data/input/: lex.rs  static copy.rs
src/data/output/: html.rs  mod.rs  quote.rs  wasm.rs
src/data/semantics/: dom.rs  event.rs  events.rs  group.rs  mod.rs  properties.rs  rules.rs  semantics.rs  value.rs
src/data/semantics/properties/: css.rs  cui.rs  mod.rs
src/misc/: context.rs  id_gen.rs  mod.rs
src/pipeline/: a_parse.rs  b_lex.rs  c_html.rs  d_quote.rs  mod.rs
src/pipeline/data/: b_meta.rs  context.rs  mod.rs
src/transform/: analyze.rs  mod.rs  parse.rs  render.rs
src/transform/analyze/: cascade.rs  mod.rs  render.rs
src/transform/compile/: css.rs  html.rs  wasm.rs
src/transform/compile/wasm/: README.md  apply.rs  header.rs  init.rs  initialize.rs  mod.rs  queue.rs  runtime.rs  static.rs  value.rs
src/transform/parse/: mod.rs  peek.rs
src/transform/render/: cascade.rs  element.rs  listener.rs  mod.rs  value.rs
src/transform/write/: css.rs  html.rs  mod.rs  wasm.rs
src/write/: html.rs  wasm.rs
tests/: README.md  basics.rs  classes.rs  complex.rs  events.rs  helloworld.rs  properties.rs  rules.rs  stackoverflow.rs  tests.rs  title.rs
tests/classes/: basics.rs  classes.rs  css_cascade.rs  event_parallel_nesting.rs  multi_element.rs  nesting.rs  parallel_nesting.rs  pseudo_classes.rs  scoped.rs
tests/data/: apply.rs  apply_toggle.rs  class_variable.rs  dynamic.rs  event_value.rs  multi_reader.rs  multi_variable.rs  persist.rs  static.rs  variable_scope.rs
tests/misc/: additional_events.rs  basics.rs  complex.rs  conditional.rs  css_defaults.rs  css_import.rs  dblclick.rs  defaults.rs  display_toggle.rs  dynamic_listeners.rs  error_handling.rs  escape_bug.rs  events.rs  expanded_events.rs  generic_events.rs  init.rs  init_listener.rs  keyboard_events.rs  keypress.rs  more_events.rs  mouse_buttons.rs  multi_listener.rs  new_events.rs  pointer_events.rs  routing.rs  scroll_event.rs  semantic_tags.rs  sibling_order.rs
tests/properties/: aria.rs  attributes.rs  concatenation.rs  css_custom.rs  css_modern.rs  float_values.rs  floats.rs  href.rs  id.rs  image.rs  keyframes.rs  keyword_names.rs  link.rs  media.rs  modern_css.rs  negative_values.rs  override_tests.rs  role.rs  tabindex.rs  tag.rs  target.rs  text.rs  title.rs  tooltip.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
(+16 files in other folders)
