[package]
authors = ["us"]
description = "Web language based on CSS syntax that compiles to HTML/JS/Wasm"
license = "MIT"
name = "cascading-ui"
repository = "https://github.com/thisminute/cascading-ui"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
log = "^0.4.16"
phf = {version = "^0.10.1", features = ["macros"]}
proc-macro2 = {version = "^1.0.36", features = ["nightly"]}
quote = "^1.0.17"
simple_logger = "^2.1.0"

[dependencies.syn]
features = [
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "visit-mut",
]
version = "^1.0.89"

[dev-dependencies]
wasm-bindgen = "^0.2.79"
wasm-bindgen-test = "^0.3.29"

[dev-dependencies.web-sys]
features = [
  "console",
  "CssStyleDeclaration",
  "CssStyleSheet",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "Location",
  "Node",
  "NodeList",
  "Window",
]
version = "^0.3.56"
