[package]
authors = ["us"]
description = "Web language based on CSS syntax that compiles to HTML/JS/Wasm"
license = "MIT"
name = "cascading-ui"
repository = "https://github.com/thisminute/cascading-ui"
version = "0.0.1"
include = [
    "/src",
    "/Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
log = "^0.4.17"
phf = {version = "^0.11.1", features = ["macros"]}
proc-macro2 = "^1.0.47"
quote = "^1.0.21"
simple_logger = "^4.0.0"

[dependencies.syn]
features = [
	"extra-traits",
	"full",
	"parsing",
	"printing",
	"visit-mut",
]
version = "^1.0.103"

[dev-dependencies]
wasm-bindgen = "^0.2.83"
wasm-bindgen-test = "^0.3.33"

[dev-dependencies.web-sys]
features = [
	"console",
	"CssStyleDeclaration",
	"CssStyleSheet",
	"Document",
	"Element",
	"Event",
	"EventListener",
	"EventTarget",
	"HtmlCollection",
	"HtmlElement",
	"HtmlHeadElement",
	"Location",
	"Node",
	"NodeList",
	"Window",
]
version = "^0.3.60"
